<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="andes_message_title" translatable="false">Atention! 👇</string>
    <string name="title_description" translatable="false">Atention! 👇</string>
    <string name="dismissible" translatable="false">Dismissible</string>
    <string name="focusable" translatable="false">Focusable</string>
    <string name="bullet" translatable="false">Bullet</string>
    <string name="a11y_heading" translatable="false">A11y Title header</string>
    <string name="andes_message_start_progress_loading" translatable="false">Start</string>
    <string name="andes_message_pause_progress_loading" translatable="false">Pause</string>
    <string name="andes_message_resume_progress_loading" translatable="false">Resume</string>
    <string name="andes_message_cancel_progress_loading" translatable="false">Cancel</string>
    <string name="andes_message_showcase_change" translatable="false">Update</string>
    <string name="change_text" translatable="false">Title text</string>
    <string name="change_body" translatable="false">Body text</string>
    <string name="andesui_demoapp_clear_button" translatable="false">Clear</string>
    <string name="andesui_demoapp_scroll_button" translatable="false">Scroll to</string>
    <string name="andesui_demoapp_smooth_scroll_button" translatable="false">Smooth Scroll to</string>
    <string name="andesui_demoapp_scroll_position_hint" translatable="false">Position</string>
    <string name="andesui_demoapp_web_storybook" translatable="false">WebView 🌐</string>
    <string-array name="hierarchy_spinner">
        <item>Quiet</item>
        <item>Loud</item>
    </string-array>
    <string-array name="simple_type_spinner" translatable="false">
        <item>Neutral</item>
        <item>Highlight</item>
        <item>Success</item>
        <item>Warning</item>
        <item>Error</item>
    </string-array>
    <string-array name="size_spinner" translatable="false">
        <item>Large</item>
        <item>Small</item>
    </string-array>
    <string name="andes_demoapp_screen_slider" translatable="false">Slider</string>
    <string name="andes_demoapp_screen_tooltip" translatable="false">Tooltip</string>
    <string name="andes_demoapp_screen_button" translatable="false">Button</string>
    <string name="andes_demoapp_screen_bottom_sheet" translatable="false">Bottom sheet</string>
    <string name="andes_demoapp_screen_message" translatable="false">Message</string>
    <string name="andes_demoapp_screen_badge" translatable="false">Badge</string>
    <string name="andes_demoapp_screen_amountfield" translatable="false">Amount field</string>
    <string name="andes_demoapp_screen_tag" translatable="false">Tag</string>
    <string name="andes_demoapp_screen_tabs" translatable="false">Tabs</string>
    <string name="andes_demoapp_screen_switch" translatable="false">Switch</string>
    <string name="andes_demoapp_screen_list" translatable="false">List</string>
    <string name="andes_demoapp_screen_dropdown" translatable="false">Dropdown</string>
    <string name="andes_demoapp_screen_searchbox" translatable="false">Searchbox</string>
    <string name="andes_demoapp_screen_checkbox" translatable="false">Checkbox</string>
    <string name="andes_demoapp_screen_textview" translatable="false">Typography</string>
    <string name="andes_demoapp_screen_carousel" translatable="false">Carousel</string>
    <string name="andes_demoapp_screen_card" translatable="false">Card</string>
    <string name="andes_demoapp_screen_snackbar" translatable="false">Snackbar</string>
    <string name="andes_demoapp_screen_coachmark" translatable="false">Coach marks</string>
    <string name="andes_demoapp_screen_radiobutton" translatable="false">Radio button</string>
    <string name="andes_demoapp_screen_datepicker" translatable="false">Date picker</string>
    <string name="andes_demoapp_screen_thumbnail" translatable="false">Thumbnail</string>
    <string name="andes_demoapp_screen_floatingmenu" translatable="false">Floating menu</string>
    <string name="andes_demoapp_screen_timepicker" translatable="false">Time picker</string>
    <string name="andes_demoapp_screen_progress_indicator" translatable="false">Progress</string>
    <string name="andes_demoapp_screen_money_amount" translatable="false">Money amount</string>
    <string name="andes_demoapp_screen_linear_progress_indicator" translatable="false">Linear progress</string>
    <string name="andes_demoapp_screen_whatsnew" translatable="false">What\'s new?</string>
    <string name="andes_demoapp_changelog_error" translatable="false">What\'s New couldn\'t be loaded, please contact our support team.</string>
    <string name="andes_demoapp_label_corner" translatable="false">Corner</string>
    <string name="andes_demoapp_label_rounded" translatable="false">Rounded</string>
    <string name="andes_demoapp_label_standard" translatable="false">Standard</string>
    <string name="andes_demoapp_label_corner_left" translatable="false">Corner Left</string>
    <string name="andes_demoapp_label_rounded_right" translatable="false">Rounded Right</string>
    <string name="andes_demoapp_label_more" translatable="false">More</string>
    <string name="andes_demoapp_screen_button_group" translatable="false">Button group</string>
    <string name="andes_demoapp_screen_modal" translatable="false">Modal</string>
    <string name="andes_demoapp_playground_lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="andes_demoapp_playground_card_body" translatable="false">Explore the different APIs needed to make any layout fully accessible</string>
    <string name="andes_demoapp_playground_message_landing_body" translatable="false">Explore our new Accessibility Landing</string>
    <string name="andes_demoapp_playground_message_landing_title" translatable="false">✨🚀 New! 🚀✨</string>
    <string name="andes_demoapp_playground_card_title" translatable="false">Android Accessibility Playground</string>
    <string name="andes_demoapp_playground_title_content_description" translatable="false">Content Description</string>
    <string name="andes_demoapp_playground_title_live_region" translatable="false">A11y Live Region</string>
    <string name="andes_demoapp_playground_title_traversal_after" translatable="false">A11y Traversal After</string>
    <string name="andes_demoapp_playground_title_semantic_views" translatable="false">Semantic Views</string>
    <string name="andes_demoapp_playground_title_announce_a11y" translatable="false">Announce for A11y</string>
    <string name="andes_demoapp_playground_title_important_for_a11y" translatable="false">Important for A11y</string>
    <string name="andes_demoapp_playground_title_a11y_heading" translatable="false">Accessibility Heading</string>
    <string name="andes_demoapp_playground_title_next_focus" translatable="false">Next Focus</string>
    <string name="andes_demoapp_playground_cd_title" translatable="false">Content description</string>
    <string name="andes_demoapp_playground_cd_body" translatable="false">String description used by the talkback when the component receives focus.</string>
    <string name="andes_demoapp_playground_cd_tv_first" translatable="false">The next image has the contentDescription set by xml</string>
    <string name="andes_demoapp_playground_cd_tv_second" translatable="false">The next image has the contentDescription set by code</string>
    <string name="andes_demoapp_playground_cd_tv_third" translatable="false">The next image does not have contentDescription</string>
    <string name="andes_demoapp_playground_ata_title" translatable="false">Accessibility Traversal After</string>
    <string name="andes_demoapp_playground_ata_body" translatable="false">Param needed to manage the navigation order of the different layout components.</string>
    <string name="andes_demoapp_playground_ata_tv" translatable="false">The navigation in the first three elements is set by xml. The rest is set in the activity, by code. Since api 23 its possible to use xml and code without any restriction</string>
    <string name="andes_demoapp_playground_nf_title" translatable="false">Next Focus (up/down/left/right)</string>
    <string name="andes_demoapp_playground_nf_body" translatable="false">This params are needed to manage the navigation when the user has peripheral controllers, such as external keyboards, switches, and more.</string>
    <string name="andes_demoapp_playground_nf_tv_first" translatable="false">Values set by xml</string>
    <string name="andes_demoapp_playground_nf_tv_second" translatable="false">Values set by code</string>
    <string name="andes_demoapp_playground_ata_button_1" translatable="false">Button 1</string>
    <string name="andes_demoapp_playground_ata_button_2" translatable="false">Button 2</string>
    <string name="andes_demoapp_playground_ata_button_3" translatable="false">Button 3</string>
    <string name="andes_demoapp_playground_ata_button_4" translatable="false">Button 4</string>
    <string name="andes_demoapp_playground_ata_button_5" translatable="false">Button 5</string>
    <string name="andes_demoapp_playground_ata_button_6" translatable="false">Button 6</string>
    <string name="andes_demoapp_playground_ata_button_7" translatable="false">Button 7</string>
    <string name="andes_demoapp_playground_ata_button_8" translatable="false">Button 8</string>
    <string name="andes_demoapp_playground_ata_button_9" translatable="false">Button 9</string>
    <string name="andes_demoapp_playground_ata_button_10" translatable="false">Button 10</string>
    <string name="andes_demoapp_playground_ata_button_11" translatable="false">Button 11</string>
    <string name="andes_demoapp_playground_ata_button_12" translatable="false">Button 12</string>
    <string name="andes_demoapp_playground_ata_button_13" translatable="false">Button 13</string>
    <string name="andes_demoapp_playground_ata_button_14" translatable="false">Button 14</string>
    <string name="andes_demoapp_playground_ata_button_15" translatable="false">Button 15</string>
    <string name="andes_demoapp_playground_ata_button_16" translatable="false">Button 16</string>
    <string name="andes_demoapp_playground_ata_button_17" translatable="false">Button 17</string>
    <string name="andes_demoapp_playground_ata_button_18" translatable="false">Button 18</string>
    <string name="andes_checkbox_showcase_example_first" translatable="false">Enviar compra sólo cuando el pedido esté completo</string>
    <string name="andes_checkbox_showcase_example_second" translatable="false">Acepto los términos y condiciones</string>
    <string name="andes_checkbox_showcase_example_third" translatable="false">Leí y acepto la normativa y acepto recibir updates sobre las comunicaciones del BCRA sobre formaciones de sociedades anónimas y presentación de estados contables.</string>
    <string name="andes_checkbox_showcase_example_fourth" translatable="false">Filtrar por usados</string>
    <string name="andes_checkbox_showcase_example_fifth" translatable="false">Sólo valores menores a $5000</string>
    <string name="andes_checkbox_showcase_example_sixth" translatable="false">Sólo en tiendas oficiales</string>
    <string name="andes_checkbox_showcase_example_seventh" translatable="false">Sólo en la tienda oficial de Adidas</string>
    <string name="andes_checkbox_specs" translatable="false">Andes Checkbox Specs 📘</string>
    <string name="andes_checkbox_showcase" translatable="false">Andes Checkbox</string>
</resources>