<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/andes_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/andes_checkbox_showcase"
            android:textColor="#000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <com.mercadolibre.android.andesui.checkbox.AndesCheckbox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:andesCheckboxAlign="left"
                app:andesCheckboxStatus="selected"
                app:andesCheckboxText="@string/andes_checkbox_showcase_example_first"
                app:andesCheckboxTitleNumberOfLines="3" />

            <com.mercadolibre.android.andesui.checkbox.AndesCheckbox
                android:id="@+id/static_checkbox_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:andesCheckboxStatus="undefined"
                app:andesCheckboxText="@string/andes_checkbox_showcase_example_second" />

            <com.mercadolibre.android.andesui.checkbox.AndesCheckbox
                android:id="@+id/static_checkbox_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:andesCheckboxAlign="left"
                app:andesCheckboxStatus="unselected"
                app:andesCheckboxText="@string/andes_checkbox_showcase_example_third"
                app:andesCheckboxTitleNumberOfLines="5" />

            <com.mercadolibre.android.andesui.checkbox.AndesCheckbox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:andesCheckboxAlign="left"
                app:andesCheckboxStatus="unselected"
                app:andesCheckboxText="@string/andes_checkbox_showcase_example_fourth"
                app:andesCheckboxType="disabled" />

            <com.mercadolibre.android.andesui.checkbox.AndesCheckbox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="32dp"
                app:andesCheckboxAlign="right"
                app:andesCheckboxStatus="undefined"
                app:andesCheckboxText="@string/andes_checkbox_showcase_example_fifth"
                app:andesCheckboxType="disabled" />

            <com.mercadolibre.android.andesui.checkbox.AndesCheckbox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                app:andesCheckboxAlign="right"
                app:andesCheckboxStatus="selected"
                app:andesCheckboxText="@string/andes_checkbox_showcase_example_sixth"
                app:andesCheckboxType="disabled" />

            <com.mercadolibre.android.andesui.checkbox.AndesCheckbox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                app:andesCheckboxAlign="right"
                app:andesCheckboxText="@string/andes_checkbox_showcase_example_seventh"
                app:andesCheckboxType="error" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/andesui_demoapp_label_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_vertical_2x"
                android:text="@string/andes_demoapp_label_more" />

            <com.mercadolibre.android.andesui.button.AndesButton
                android:id="@+id/andesui_demoapp_andes_checkbox_specs_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_vertical"
                app:andesButtonHierarchy="quiet"
                app:andesButtonSize="medium"
                app:andesButtonText="@string/andes_checkbox_specs"
                app:layout_constraintTop_toBottomOf="@id/andesui_demoapp_label_more" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>